# mera_capital

./: .envrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/app/application/commands/: __init__.py  get_currency_records_command.py
src/app/application/constants/: __init__.py  ticker.py
src/app/application/gateways/: __init__.py  currency.py
src/app/application/interactors/: __init__.py  get_currency_records.py
src/app/application/models/: __init__.py  currency.py
src/app/application/value_objects/: __init__.py  unix_timestamp.py
src/mera_capital/application/: __init__.py
src/mera_capital/application/client/: __init__.py  client_interface.py  derebit_client.py
src/mera_capital/application/commands/: __init__.py  get_currency_records_command.py  sync_curr_price_command.py  sync_currency_price_command.py
src/mera_capital/application/constants/: __init__.py  ticker.py
src/mera_capital/application/gateways/: __init__.py  currency.py
src/mera_capital/application/interactors/: __init__.py  get_currency_records.py  sync_curr_price.py  sync_currency_price.py
src/mera_capital/application/models/: __init__.py  currency.py
src/mera_capital/application/value_objects/: __init__.py  unix_timestamp.py
src/mera_capital/infrastructure/: __init__.py  currency_synchronizer.py
src/mera_capital/infrastructure/client/: client.py
src/mera_capital/infrastructure/clients/: __init__.py  derebit_client.py
src/mera_capital/infrastructure/db/: __init__.py  config.py  metadata.py
src/mera_capital/presentation/: cli.py  web_api.py
(+5 files in other folders)
